Added Search controller

--- a/LiftOffProject/Views/Home/Index.cshtml
+++ b/LiftOffProject/Views/Home/Index.cshtml
@@ -3,6 +3,7 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <h1 class="display-4">Welcome To Wine Celler</h1>
+    <p><a asp-controller="Wine" asp-action="Index">List of All Wines in the Cellar</a></p>
+    <p><a asp-controller="Search" asp-action="Index">Search Wines</a></p>
 </div>
