Quiz and authorization

--- a/LiftOffProject/Views/Home/Index.cshtml
+++ b/LiftOffProject/Views/Home/Index.cshtml
@@ -6,3 +6,16 @@
     <h1 class="display-4">Welcome</h1>
     <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
 </div>
+
+<div>
+    <h1>Don't Know What Type of Wine You Like?</h1>
+    <h2>Take Our Wine Quiz!</h2>
+    <p><a asp-controller="Quiz" asp-action="QuizForm">Click Here!</a></p>
+
+</div>
+
+
+
+
+
+
