--- a/LiftOffProject/Views/Quiz/QuizResultForm.cshtml
+++ b/LiftOffProject/Views/Quiz/QuizResultForm.cshtml
@@ -1,5 +1,7 @@
 ﻿
 @model LiftOffProject.Models.Wine
 
-<h1>@Model.Name</h1>
+<h1>Your Wine Selection: @Model.Name</h1>
 <p>@Model.Description</p>
+
+@*How to add a picture?*@
