--- a/LiftOffProject/Views/Quiz/QuizResultForm.cshtml
+++ b/LiftOffProject/Views/Quiz/QuizResultForm.cshtml
@@ -8,35 +8,51 @@
 
 @if (Model.Name == "Riesling")
 {
-    <img src="~/img/Riesling-by-Region_Germany.jpeg" alt="Riesling by Region Germany" width="400" height="400" />
+    <img src="~/img/BGM_Riesling.png" alt="BGM_Riesling" />
+    <p>Black Girl Magic Riesling</p>
+    <p>Price: $19.99</p>
 
 }
 else if (Model.Name == "Chardonnay")
 {
-    <img src="~/img/Chardonnay.jpeg" alt="Chardonnay" width="400" height="400" />
+    <img src="~/img/MSC_Chardonnay_2020.png" alt="MSC_Chardonnay_2020" />
+    <p>McBride Sisters Collection Chardonnay Central Coast California</p>
+    <p>Price: $16.99</p>
 
 }
 else if (Model.Name == "Pinot Grigio")
 {
-    <img src="~/img/Pinot-grigio.jpeg" alt="Pinot-grigio" width="400" height="400" />
+    <img src="~/img/MSC_Pinot_Gris.png" alt="MSC_Pinot_Gris" />
+    <p>McBride Sisters Collection Marlborough Pinot Gris</p>
+    <p>Price: $16.99</p>
 }
 else if (Model.Name == "Sauvignon Blanc")
 {
-    <img src="~/img/Sauvignon-Blanc.jpeg" alt="Sauvignon-Blanc" width="400" height="400" />
+    <img src="~/img/MSC_Sauvignon_Blanc.png" alt="MSC_Sauvignon_Blanc" />
+    <p>McBride Sisters Collection Sauvignon Blanc Marlborough New Zealand</p>
+    <p>Price: $16.99</p>
 }
 else if (Model.Name == "Merlot")
 {
-    <img src="~/img/aboutMerlot_merlot_wines.jpeg" alt="Sauvignon Blanc" width="400" height="400" />
+    <img src="~/img/BGM_Merlot.png" alt="BGM_Merlot" />
+    <p>Black Girl Magic Merlot</p>
+    <p>Price: $24.99</p>
 }
 else if (Model.Name == "Pinot Noir")
 {
-    <img src="~/img/Pinot_Noir.jpeg" alt="Pinot_Noir" width="400" height="400" />
+    <img src="~/img/Pinot_Noir.png" alt="Pinot_Noir" />
+    <p>McBride Sisters Collection Reserve Pinot Noir</p>
+    <p>Price: $69.99</p>
 }
 else if (Model.Name == "Cabernet Sauvignon")
 {
-    <img src="~/img/Cabernet.jpeg" alt="Cabernet" width="400" height="400" />
+    <img src="~/img/MSC_Red_Blend_2020.png" alt="MSC_Red_Blend_2020" />
+    <p>McBride Sisters Collection Red Blend</p>
+    <p>Price: $18.99</p>
 }
 else if (Model.Name == "Zinfandel")
 {
-    <img src="~/img/What-Zinfandel-tastes-like.jpeg" alt="What-Zinfandel-tastes-like.jpeg" width="400" height="400" />
+    <img src="~/img/BGM_Zinfandel.png" alt="BGM_Zinfandel" />
+    <p>Black Girl Magic Zinfandel</p>
+    <p>Price: $24.99</p>
 }
