--- a/LiftOffProject/Views/Home/Index.cshtml
+++ b/LiftOffProject/Views/Home/Index.cshtml
@@ -3,14 +3,15 @@
 }
 @model List<LiftOffProject.Models.Wine>
 
+
 <div class="text-center">
     <h1 class="display-4">Welcome To Wine Celler</h1>
-  
-    <p><a asp-controller="List" asp-action="Index">List of All Wines in the Cellar By Category</a></p>
+  @*make these buttons instead of links*@
+    <p><a asp-controller="List" asp-action="Index">List of All Wines in the Cellar</a></p>
     <p><a asp-controller="Home" asp-action="AddWine">Add a Wine to the Cellar</a></p>
     <p><a asp-controller="Search" asp-action="Index">Search Wines in the Cellar</a></p>
-  
-
+    <p><a asp-controller="WineCategory" asp-action="Add">Add a Category to the Cellar</a></p>
+    <p><a asp-controller="Notes" asp-action="Add">Add a Note to the Cellar</a></p>
 </div>
 
 @if (Model.Count == 0)
@@ -22,13 +23,13 @@ else
     <table class="table">
         <tr>
             <th>Wine Name</th>
-            <th>Category</th>
+            @*<th>Flavor</th>*@
         </tr>
         @foreach (Wine wine in Model)
         {
             <tr>
                 <td><a asp-controller="Home" asp-action="Detail" asp-route-id="@wine.Id">@wine.Name</a></td>
-               @*<td>@wine.Category.Name</td>*@ 
+                @*<td>@wine.Category</td>@* category.name doesn't return an object. Investigate or remove*@
             </tr>
         }
     </table>
