--- a/LiftOffProject/Views/List/Index.cshtml
+++ b/LiftOffProject/Views/List/Index.cshtml
@@ -42,3 +42,24 @@
         }
     </tr>
 </table>
+
+<h2>Delete a Wine</h2>
+
+<form method="post">
+    @foreach (var wine in ViewBag.wines)
+    {
+        <div class="form-group">
+            <label>
+                <span>@wine.Id</span>
+                <input type="checkbox" name="wineIds" value="@wine.Id" class="form-control">
+            </label>
+        </div>
+    }
+
+</form>
+
+<input type="submit" value="Delete Selected Winess" class="btn btn-danger">
+
+
+
+
