--- a/LiftOffProject/Views/Home/Index.cshtml
+++ b/LiftOffProject/Views/Home/Index.cshtml
@@ -5,28 +5,32 @@
 
 
 <div class="text-center">
-    <h1 class="display-4">Welcome To Wine Celler</h1>
+    <h1 style="color:antiquewhite" class="display-4">Welcome To Wine Celler</h1>
 
     @*make these buttons instead of links*@
 
-  @*make these buttons instead of links*@
-
-    <p><a asp-controller="List" asp-action="Index">List of All Wines in the Cellar</a></p>
-    <p><a asp-controller="Home" asp-action="AddWine">Add a Wine to the Cellar</a></p>
-    <p><a asp-controller="Search" asp-action="Index">Search Wines in the Cellar</a></p>
-    <p><a asp-controller="WineCategory" asp-action="Add">Add a Category to the Cellar</a></p>
-    <p><a asp-controller="Notes" asp-action="Add">Add a Note to the Cellar</a></p>
+    <button><a class="btn default" asp-controller="List" asp-action="Index">List of All Wines in the Cellar</a></button>
+    <button><a class="btn default" asp-controller="Home" asp-action="AddWine">Add a Wine to the Cellar</a></button>
+    <button><a class="btn default" asp-controller="Search" asp-action="Index">Search Wines in the Cellar</a></button>
+    <button><a class="btn default" asp-controller="WineCategory" asp-action="Add">Add a Category to the Cellar</a></button>
+    <button><a class="btn default" asp-controller="Notes" asp-action="Add">Add a Note to the Cellar</a></button>
+    <button><a class="btn default" asp-controller="Home" asp-action="Delete">Delete Wine</a></button>
 </div>
 
-<div>
-  <h1>Don't Know What Type of Wine You Like?</h1>
-  <h2>Take Our Wine Quiz!</h2>
-  <p><a asp-controller="Quiz" asp-action="QuizForm">Click Here!</a></p>
+<div class="text-center">
+    <h2 style="color:antiquewhite">Don't Know What Type of Wine You Like?</h2>
+    <h3 style="color:antiquewhite">Take Our Wine Quiz!</h3>
+    <button><a class="btn default" asp-controller="Quiz" asp-action="QuizForm">Click Here!</a></button>
+</div>
+
+<div class="center">
+    <div class="tenor-gif-embed" data-postid="15465402" data-share-method="host" data-aspect-ratio="1.33891" data-width="100%"><a href="https://tenor.com/view/betty-white-wine-cheers-drinks-red-wine-gif-15465402">Betty White Wine GIF</a>from <a href="https://tenor.com/search/betty+white-gifs">Betty White GIFs</a></div>
+    <script type="text/javascript" async src="https://tenor.com/embed.js"></script>
 </div>
 
 @if (Model.Count == 0)
 {
-    <p>No Wines yet!</p>
+    <h3 style="color:antiquewhite">No Wines In List Yet!</h3>
 }
 else
 {
