Scaffolded Identity Views

--- a/LiftOffProject/wwwroot/css/site.css
+++ b/LiftOffProject/wwwroot/css/site.css
@@ -60,8 +60,10 @@ html {
 }
 
 body {
-   Margin bottom by footer height 
-  margin-bottom: 60px;
+    /*Margin bottom by footer height */
+    margin-bottom: 60px;
+    background-color: rgba(139,0,0);
+   
 }
 .footer {
   position: absolute;
