Moved list of wines to the list controller

--- a/LiftOffProject/Areas/Identity/Pages/Account/Login.cshtml
+++ b/LiftOffProject/Areas/Identity/Pages/Account/Login.cshtml
@@ -57,7 +57,7 @@
                         <p style="color:#74FFFF">
                             Part wine catalogue, part educational resource. All you need is a wine label to catalogue your favorite wines.
                             Includes access to professional tasting notes, so you can keep track of your favorite sips. Feel free  to complete
-                            our quick survery so your "virtual wine assistant" can create a personalized pick using factor like food pairing, variety, and personality.
+                            our quick survey so your "virtual wine assistant" can create a personalized pick using factors like food pairing, variety, and personality.
                         </p>
                     </div>
                 }
