--- a/LiftOffProject/Views/Quiz/QuizForm.cshtml
+++ b/LiftOffProject/Views/Quiz/QuizForm.cshtml
@@ -8,11 +8,11 @@
 
 @model LiftOffProject.Models.Quiz
 
-    <h1 style="color:antiquewhite">Take Our Wine Quiz!</h1>
-  
+    <h1 class="text-center" style="color:antiquewhite">Take Our Wine Quiz!</h1>
+    <div class="xl-center">
         <div class="tenor-gif-embed" data-postid="11337162" data-share-method="host" data-aspect-ratio="1" data-width="40%"><a href="https://tenor.com/view/julius-stir-wine-liquor-fancy-gif-11337162">Julius Stir GIF</a>from <a href="https://tenor.com/search/julius-gifs">Julius GIFs</a></div>
         <script type="text/javascript" async src="https://tenor.com/embed.js"></script>
- 
+    </div>
    
     <form method="post" action="Quiz" style="color:antiquewhite">
         <h3>Everyone loves chocolate...Right??? Which type of chocolate do you prefer?</h3>
