--- a/LiftOffProject/Areas/Identity/Pages/Account/Login.cshtml
+++ b/LiftOffProject/Areas/Identity/Pages/Account/Login.cshtml
@@ -1,14 +1,29 @@
 @page
 @model LoginModel
 
+
 @{
-   @* ViewData["Title"] = "Log in";*@
-    ViewData["Title"] = "LOGIN";
+     ViewData["Title"] = "Log in";
+    @*ViewData["Title"] = "LOGIN";*@
 }
 
-<h1 style="color:white">@ViewData["Title"]</h1>
-<div class="row">
-    <div class="col-md-4">
+
+<!-- Background image -->        
+
+<div
+  
+  style="
+    background-image: url(/img/shop-wine.jpg);
+    height: 100vh;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+  "
+>
+
+<h1 style="color:white; visibility:hidden">@ViewData["Title"]</h1>
+<div class="row justify-content-between">
+    <div class="col-md-4 offset-sm-1">
         <section>
             <form id="account" method="post">
                 <h4 style="color:white">Please enter your login and password!</h4>
@@ -37,42 +52,42 @@
                 </div>
                 <div class="form-group">
                     <p>
-                        <a id="forgot-password" asp-page="./ForgotPassword">Forgot your password?</a>
+                        <a style="color:#74FFFF" id="forgot-password" asp-page="./ForgotPassword">Forgot your password?</a>
                     </p>
                     <p>
-                        <a asp-page="./Register" asp-route-returnUrl="@Model.ReturnUrl">Register as a new user</a>
+                        <a style="color:#74FFFF" asp-page="./Register" asp-route-returnUrl="@Model.ReturnUrl">Register as a new user</a>
                     </p>
                 </div>
             </form>
         </section>
     </div>
-    <div class="col-md-6 col-md-offset-2">
+    <div class="col-lg-6 col-md-offset-2">
         <section>
             <h4 style="color:white">Welcome to the Wine Cellar!</h4>
             <hr />
             @{
                 if ((Model.ExternalLogins?.Count ?? 0) == 0)
                 {
-                    <div>
-                        <p style="color:#74FFFF">
-                            Part wine catalogue, part educational resource. All you need is a wine label to catalogue your favorite wines.
-                            Includes access to professional tasting notes, so you can keep track of your favorite sips. Feel free  to complete
-                            our quick survey so your "virtual wine assistant" can create a personalized pick using factors like food pairing, variety, and personality.
-                        </p>
-                    </div>
+                                        <div>
+                                            <p style="color:#74FFFF">
+                                                Part wine catalogue, part educational resource. All you need is a wine label to catalogue your favorite wines.
+                                                Includes access to professional tasting notes, so you can keep track of your favorite sips. Feel free  to complete
+                                                our quick survey so your "virtual wine assistant" can create a personalized pick using factors like food pairing, variety, and personality.
+                                            </p>
+                                        </div>
                 }
                 else
                 {
-                    <form id="external-account" asp-page="./ExternalLogin" asp-route-returnUrl="@Model.ReturnUrl" method="post" class="form-horizontal">
-                        <div>
-                            <p>
-                                @foreach (var provider in Model.ExternalLogins)
+                                        <form id="external-account" asp-page="./ExternalLogin" asp-route-returnUrl="@Model.ReturnUrl" method="post" class="form-horizontal">
+                                            <div>
+                                                <p>
+                                                    @foreach (var provider in Model.ExternalLogins)
                                 {
-                                    <button type="submit" class="btn btn-primary" name="provider" value="@provider.Name" title="Log in using your @provider.DisplayName account">@provider.DisplayName</button>
+                                                        <button type="submit" class="btn btn-primary" name="provider" value="@provider.Name" title="Log in using your @provider.DisplayName account">@provider.DisplayName</button>
                                 }
-                            </p>
-                        </div>
-                    </form>
+                                                </p>
+                                            </div>
+                                        </form>
                 }
             }
         </section>
@@ -83,3 +98,4 @@
 @section Scripts {
     <partial name="_ValidationScriptsPartial" />
 }
+</div>
