--- a/LiftOffProject/Areas/Identity/Pages/Account/Register.cshtml
+++ b/LiftOffProject/Areas/Identity/Pages/Account/Register.cshtml
@@ -3,64 +3,77 @@
 @{
     ViewData["Title"] = "Register";
 }
+<!-- Background image -->        
 
-<h1 style="color:white">@ViewData["Title"]</h1>
+<div
+  
+  style="
+    background-image: url(/img/shop-wine.jpg);
+    height: 100vh;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+  "
+>
+<h1 style="color:white; visibility:hidden">@ViewData["Title"]</h1>
+
 
 <div class="row">
-    <div class="col-md-4">
+    <div class="col-md-4 offset-sm-1">
         <form asp-route-returnUrl="@Model.ReturnUrl" method="post">
-            <h4>Create a new account.</h4>
+            <h4 style="color:white">Create a new account.</h4>
             <hr />
             <div asp-validation-summary="All" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="Input.Email"></label>
+                <label style="color:#74FFFF" asp-for="Input.Email"></label>
                 <input asp-for="Input.Email" class="form-control" />
                 <span asp-validation-for="Input.Email" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Input.Password"></label>
+                <label style="color:#74FFFF" asp-for="Input.Password"></label>
                 <input asp-for="Input.Password" class="form-control" />
                 <span asp-validation-for="Input.Password" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Input.ConfirmPassword"></label>
+                <label style="color:#74FFFF" asp-for="Input.ConfirmPassword"></label>
                 <input asp-for="Input.ConfirmPassword" class="form-control" />
                 <span asp-validation-for="Input.ConfirmPassword" class="text-danger"></span>
             </div>
             <button type="submit" class="btn btn-primary">Register</button>
         </form>
     </div>
-    <div class="col-md-6 col-md-offset-2">
+    <div class="col-lg-6 col-md-offset-2">
         <section>
-            <h4>Use another service to register.</h4>
+            <h4 style="color:white">Register for the Wine Cellar.</h4>
             <hr />
             @{
                 if ((Model.ExternalLogins?.Count ?? 0) == 0)
                 {
-                    <div>
-                        <p style="color:#74FFFF">
-                            Part wine catalogue, part educational resource. All you need is a wine label to catalogue your favorite wines.
-                            Includes access to professional tasting notes, so you can keep track of your favorite sips. Feel free  to complete
-                            our quick survey so your "virtual wine assistant" can create a personalized pick using factors like food pairing, variety, and personality.
-                        </p>
-                    </div>
+                        <div>
+                            <p style="color:#74FFFF">
+                                Part wine catalogue, part educational resource. All you need is a wine label to catalogue your favorite wines.
+                                Includes access to professional tasting notes, so you can keep track of your favorite sips. Feel free  to complete
+                                our quick survey so your "virtual wine assistant" can create a personalized pick using factors like food pairing, variety, and personality.
+                            </p>
+                        </div>
                 }
                 else
                 {
-                    <form id="external-account" asp-page="./ExternalLogin" asp-route-returnUrl="@Model.ReturnUrl" method="post" class="form-horizontal">
-                        <div>
-                            <p>
-                                @foreach (var provider in Model.ExternalLogins)
+                        <form id="external-account" asp-page="./ExternalLogin" asp-route-returnUrl="@Model.ReturnUrl" method="post" class="form-horizontal">
+                            <div>
+                                <p>
+                                    @foreach (var provider in Model.ExternalLogins)
                                 {
-                                    <button type="submit" class="btn btn-primary" name="provider" value="@provider.Name" title="Log in using your @provider.DisplayName account">@provider.DisplayName</button>
+                                        <button type="submit" class="btn btn-primary" name="provider" value="@provider.Name" title="Log in using your @provider.DisplayName account">@provider.DisplayName</button>
                                 }
-                            </p>
-                        </div>
-                    </form>
+                                </p>
+                            </div>
+                        </form>
                 }
             }
         </section>
     </div>
+</div>
 </div>
 
 @section Scripts {
