--- a/LiftOffProject/Views/Notes/AddWine.cshtml
+++ b/LiftOffProject/Views/Notes/AddWine.cshtml
@@ -1,11 +1,11 @@
 ﻿@model LiftOffProject.ViewModels.AddWineNoteViewModel
 
-<h1>Add Tag to Event: @Model.Wine.Name</h1>
+<h1 style="color:#74FFFF">Add An Additional Note to: @Model.Wine.Name</h1>
 
 <form asp-controller="Notes" asp-action="AddWine" method="post">
     <input type="hidden" value="@Model.Wine.Id" name="WineId" />
     <div class="form-group">
-        <label asp-for="NotesId">Notes</label>
+        <label style="color:white" asp-for="NotesId">Notes</label>
         <select asp-for="NotesId" asp-items="Model.Notes"></select>
         <span asp-validation-for="NotesId"></span>
     </div>
