--- a/LiftOffProject/Views/WineCategory/About.cshtml
+++ b/LiftOffProject/Views/WineCategory/About.cshtml
@@ -2,16 +2,16 @@
 
 @if (Model.Count == 0)
 {
-    <h1>No Wine Categories Listed</h1>
+    <h1 style="color:white">No Wine Categories Listed</h1>
 }
 else
 {
-      <h1>Wine Categories in the Database</h1>
+      <h1 style="color:#74FFFF">Wine Category Description</h1>
 
     <ul>
         @foreach (var category in Model)
         {
-            <li>Category: @category.Name , Flavors: @category.Flavors</li>
+            <li style="color:white">Category: @category.Name , Flavors: @category.Flavors</li>
             
         }
     </ul>
