--- a/LiftOffProject/Views/WineCategory/Add.cshtml
+++ b/LiftOffProject/Views/WineCategory/Add.cshtml
@@ -1,16 +1,17 @@
 ﻿@using LiftOffProject.ViewModels;
 @model AddWineCategoryViewModel;
 
-<h1>Add New Wine Category</h1>
+
+<h1 style="color:#74FFFF">Add New Wine Category</h1>
 
 <form asp-controller="WineCategory" asp-action="ProcessAddWineCategoryForm" method="post">
     <div class="form-group">
-        <label asp-for="Name">Wine Category Name</label>
+        <label style="color:white"asp-for="Name">Wine Category Name</label>
         <input asp-for="Name" />
         <span asp-validation-for="Name"></span>
     </div>
     <div class="form-group">
-        <label asp-for="Flavors">Wine Flavors</label>
+        <label style="color:white" asp-for="Flavors">Wine Flavors</label>
         <input asp-for="Flavors" />
          <span asp-validation-for="Flavors"></span>
     </div>
