--- a/LiftOffProject/Views/WineCategory/Index.cshtml
+++ b/LiftOffProject/Views/WineCategory/Index.cshtml
@@ -1,12 +1,12 @@
 ﻿@model List<LiftOffProject.Models.WineCategory>
 
-<h1>Wine Category Currently in the Database</h1>
-<p><a asp-controller="WineCategory" asp-action="Add">Add a Wine Category</a></p>
+<h1 style="color:#74FFFF">Wine Category Currently in the Database</h1>
+<p><a style="color:white" asp-controller="WineCategory" asp-action="Add">Add a Wine Category</a></p>
 
 
 @if (Model.Count == 0)
 {
-    <p>No Wine Categeories are currently in the database!</p>
+    <p style="color:white">No Wine Categeories are currently in the database!</p>
 }
 else
 {
@@ -15,7 +15,7 @@ else
             @foreach (WineCategory category in Model)
             {
                 <li>
-                    <a asp-controller="WineCategory" asp-action="About" asp-route-id="@category.Id">@category.Name</a>
+                    <a style="color:white" asp-controller="WineCategory" asp-action="About" asp-route-id="@category.Id">@category.Name</a>
                 </li>
             }
         </ul>
